# antizero-chess

./: .gitignore  CMakeLists.txt  README.md
src/: bitboard.cpp  bitboard.h  evaluate.cpp  evaluate.h  magics.cpp  magics.h  main.cpp  movegen.cpp  movegen.h  perft.cpp  position.cpp  position.h  search.cpp  search.h  types.h  uci.cpp  uci.h
src/bits/: stdc++.h
